--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -250,7 +250,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </div>
   <br />
 	<section class="alert alert-info">
-  <h2 class="h3">Get your tax slips online</h2>
+  <h2 class="h3">Tax slips</h2>
 
 <p>T4E, T4A and NR4 tax slips will be available <strong>online</strong> through My Service Canada Account <strong>as of February 2, 2020</strong>.</p>
 		<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct in My Service Canada Account.
