--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -285,6 +285,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <p>This page offers you, the EI client, access to information and self-services on your currently active and past EI claims. See important messages, the current status of your claim and us the “Alert Me” optional service to stay on top of all developments. Payment details on currently and past terminated claims include gross/net amounts, dates of payment and type of benefit received. You can access your electronic T4E and Records of Employment a change your mailing address, telephone number and Direct Deposit info within our extended operation hours (see help text for hours).</p> 
 		
 		<section>
+			<div class="panel panel-default">
+        <div class="panel-body">
          <div class="mrgn-tp-lg header-bg">
       <h2>Information on your latest EI claim</h2>
       <div class="brdr-bttm-fade"></div>
@@ -294,9 +296,13 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html';" type="button" class="btn btn-default">View my status and correspondence (Alert me)</button>
         <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html';" type="button" class="btn btn-default">Latest claim</button>
         <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html';" type="button" class="btn btn-default">Payment Information</button>
+				</div>
+			</div>
 		</section>
 		
 		<section>
+			<div class="panel panel-default">
+        <div class="panel-body">
          <div class="mrgn-tp-lg header-bg">
       <h2>Personal information</h2>
       <div class="brdr-bttm-fade"></div>
@@ -311,6 +317,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language for written communications</button>
+		</div>
+			</div>
 		</section>
 		
 		
