--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -281,7 +281,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <section>
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="mrgn-tp-lg header-bg">
+            <div class="header-bg">
               <h2 id="a1-1" class="mrgn-tp-0">Information on your latest EI claim</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
