--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -296,7 +296,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <section>
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="mrgn-tp-lg header-bg">
+            <div class="mrgn-tp-md header-bg">
               <h2>Personal information</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
