--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -281,7 +281,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <section>
         <div class="panel panel-default">
           <div class="panel-body">
-            <div class="header-bg">
+            <div class="mrgn-tp-md header-bg">
               <h2 id="a1-1" class="mrgn-tp-0">Information on your latest EI claim</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
@@ -297,7 +297,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2>Personal information</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">Personal information</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -316,14 +316,22 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-3" class="h3 mrgn-tp-0">Records of Employment</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-3" class="mrgn-tp-0">Records of Employment</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Allows you to view and print ROEs submitted electronically by your employer during the last seven years. It also provides some information on ROEs that were submitted in paper format within the last seven years.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html';" type="button" class="btn btn-default">Records of Employment</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-4" class="h3 mrgn-tp-0">Tax information</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-4" class="mrgn-tp-0">Tax information</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>The Tax slips T4E button Allows you to view and print T4Es for the current year and for the past six years if you received EI benefits. The Tax slip mailing options button allows you to suppress your mailed paper copy. </p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html';" type="button" class="btn btn-default">Tax slips (T4E)</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button>
@@ -331,35 +339,55 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-5" class="h3 mrgn-tp-0">Past Claims</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-5" class="mrgn-tp-0">Past Claims</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>If applicable, this page displays a list of your past EI claims. Choosing a particular claim will provide you with specific information on that past claim including past claim payment details. </p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims.html';" type="button" class="btn btn-default">Past claim(s)</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-6" class="h3 mrgn-tp-0">eForms</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-6" class="mrgn-tp-0">eForms</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>If you have an active EI claim and depending on the type of benefits you are receiving this service will display eForms which allow you to submit information to your claim electronically. eForms will only be displayed if you are on an active claim and you are receiving benefits to which these eForms apply. Note that eForms will not be displayed if you do not have an active EI claim or if these eForms do not apply to the type of benefits you are receiving (see the Help text).</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Provide new information regarding my claim</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-7" class="h3 mrgn-tp-0">Self-employed</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-7" class="mrgn-tp-0">Self-employed</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Self-employed Canadians can access Employment Insurance (EI) special benefits by entering into an agreement, or registering, with the Canada Employment Insurance Commission. </p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed.html';" type="button" class="btn btn-default">Self-employment Agreement, Register and/or status </button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-8" class="h3 mrgn-tp-0">Province of residence</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-8" class="mrgn-tp-0">Province of residence</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Allows you to select the specific Province in which you reside and are claiming EI benefits. Selecting the c orrect Province ensures that you can access your EI information. </p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province.html';" type="button" class="btn btn-default">Province of residence</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-9" class="h3 mrgn-tp-0">Mistakes can Happen</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-9" class="mrgn-tp-0">Mistakes can Happen</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Information on how to correct past mistakes.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html';" type="button" class="btn btn-default">Mistakes can happen</button>
         </div>
