--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -282,7 +282,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-1" class="mrgn-tp-0">Information on your latest EI claim</h2>
+              <h2 id="a1-1" class="mrgn-tp-0">Information on your latest EI claim&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -317,7 +317,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-3" class="mrgn-tp-0">Records of Employment</h2>
+              <h2 id="a1-3" class="mrgn-tp-0">Records of Employment&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
