--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -82,7 +82,6 @@
     text-align: left;
 }
 .large-btn b {
-
     display: inline-block;
     width: 85%;
     text-align: center;
@@ -250,6 +249,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     </div>
   </div>
   <br />
+	<section class="alert alert-info">
+  <h2 class="h3">Tax slips</h2>
+
+<p>T4E, T4A and NR4 tax slips will be available <strong>online</strong> through My Service Canada Account <strong>as of February 2, 2020</strong>.</p>
+		<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct in My Service Canada Account.
+</p>
+	</section>
+
   <section>
     <div class="mrgn-tp-lg header-bg">
       <h2>Our services</h2>
@@ -263,19 +270,19 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
   </section>
-	<br />
+
   <div class="row">
-  <aside style="padding-top:40px;">
+  <aside style="padding-top:90px; padding-left:10px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Our partner(s)</h2>
     <div class="brdr-bttm-fade"></div>
   </div>  <br />
-	  <div class="col-md-5">
+	 <!-- <div class="col-md-5">
 		  <section>
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="panel-body">-->
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
-        <p>You can now switch to your Canada Revenue Agency account to view and manager your 
+       <p>You can now switch to your Canada Revenue Agency account to view and manager your 
 			<ul>
 				<li>tax returns</li>
 				<li>tax credits</li>
@@ -284,11 +291,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 				<li>Tax Free Savings Account (TFSA) and</li>
 				<li>Canada Child Benefits.</li>
 		  </ul>
-        <p>No need to log in again.</p>
-        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> </div>
+        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> 
+	  <!--</div>
     </div>
 		  </section>
-	  </div>
+	  </div>-->
+<br />
+	<br /> 
+	  
 	  </aside>
 	</div>
   </span> 
