--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -282,7 +282,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="panel panel-default">
       <div class="panel-body">-->
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
-       <p>You can now switch to your Canada Revenue Agency account to view and manager your 
+       <p>You can now switch to your Canada Revenue Agency account to view and manager your:
 			<ul>
 				<li>tax returns</li>
 				<li>tax credits</li>
