--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -284,13 +284,15 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
        <p>You can now switch to your Canada Revenue Agency account to view and manager your:
 			<ul>
-				<li>tax returns</li>
-				<li>tax credits</li>
-				<li>account balance</li>
-				<li>Registered Retirement Savings Plan (RRSP)</li>
-				<li>Tax Free Savings Account (TFSA) and</li>
+				<li>tax returns;</li>
+				<li>tax credits;</li>
+				<li>account balance;</li>
+				<li>Registered Retirement Savings Plan (RRSP);</li>
+				<li>Tax Free Savings Account (TFSA); and</li>
 				<li>Canada Child Benefits.</li>
 		  </ul>
+	  
+	  <p>No need to log in again.</p>
         <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> 
 	  <!--</div>
     </div>
