--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -250,7 +250,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <!-- List group -->
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">Information on your latest EI claim</a></li>
-          <li class="list-group-item"><a href="#a1-2">Personal information</a></li>
+          <li class="list-group-item"><a href="#a1-2">View/Change</a></li>
           <li class="list-group-item"><a href="#a1-3">Records of Employment</a></li>
           <li class="list-group-item"><a href="#a1-4">Tax slips</a></li>
           <li class="list-group-item"><a href="#a1-5">Past Claims</a></li>
@@ -297,7 +297,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-2" class="mrgn-tp-0">Personal information</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">View/Change</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
