--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -198,7 +198,11 @@
 <p>CPP/OAS also allows you to access your electronic T4E, view your CPP contributions, request a CPP Child-Rearing Provision and/or give consent for someone to communicate with CPP/OAS on your behlaf. </p>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-1" class="h3 mrgn-tp-0">CPP Application</h2>
+			            <div class="mrgn-tp-md header-bg">
+              <h2 id="a1-1" class="mrgn-tp-0">CPP Application</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Apply for CPP or view detailed information on your application status.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement.html';" type="button" class="btn btn-default">Apply for my CPP retirement pension</button>
 			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html';" type="button" class="btn btn-default">Apply for my CPP disability benefit</button>
@@ -207,7 +211,11 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-2" class="h3 mrgn-tp-0">OAS/GIS Pension Application</h2>
+			            <div class="mrgn-tp-md header-bg">
+              <h2 id="a1-2" class="mrgn-tp-0">OAS/GIS Pension Application</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Apply for OAS/GIS or view detailed information on your application status.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html';" type="button" class="btn btn-default">Apply for my OAS pension and the GIS</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html';" type="button" class="btn btn-default">Application status</button>
@@ -216,7 +224,11 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-3" class="h3 mrgn-tp-0">View/Change personal information</h2>
+			            <div class="mrgn-tp-md header-bg">
+              <h2 id="a1-3" class="mrgn-tp-0">View/Change</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondance will be sent to the address, including any payments.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Telephone number</button>
@@ -225,21 +237,33 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-4" class="h3 mrgn-tp-0">Payment and Direct Deposit</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-4" class="mrgn-tp-0"></h2>
+              <div class="brdr-bttm-fade">Payment and Direct Deposit</div>
+            </div>
+            <br />
           <p>The payment and direct deposit is used to view your most up-to-date payment reports and sign up for Direct Deposit.</p>
            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html';" type="button" class="btn btn-default">Payment information</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-5" class="h3 mrgn-tp-0">CPP Contributions and Benefits</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-5" class="mrgn-tp-0">CPP Contributions and Benefits</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>CPP Contribtuions and Benefits is used to view your contributions and your pensionable earnings.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html';" type="button" class="btn btn-default">CPP contributions</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-6" class="h3 mrgn-tp-0">CPP Child-Rearing Provision</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-6" class="mrgn-tp-0"></h2>
+              <div class="brdr-bttm-fade">CPP Child-Rearing Provision</div>
+            </div>
+            <br />
           <p>If you took time off from work or worked less to look after your young children, you may be able to increase the amount of your CPP retirement pension and other CPP benefits with the child-rearing provisions.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html';" type="button" class="btn btn-default">Request my Child-Rearing Provision</button>
 			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html';" type="button" class="btn btn-default">My Child-Rearing Provision</button>
@@ -247,7 +271,11 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-7" class="h3 mrgn-tp-0">Tax information</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-7" class="mrgn-tp-0">Tax information</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Consider your overall tax situation before you choose to have federal tax deducted from your CPP and OAS monthly benefits. You can change the amount of federal taxes deducted at any time.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html';" type="button" class="btn btn-default">Tax slips (T4A, NR4)</button>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button>
@@ -256,7 +284,11 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-8" class="h3 mrgn-tp-0">Consent on my behalf</h2>
+			<div class="mrgn-tp-md header-bg">
+              <h2 id="a1-8" class="mrgn-tp-0">Consent on my behalf</h2>
+              <div class="brdr-bttm-fade"></div>
+            </div>
+            <br />
           <p>Use this application to name an authorized person (for example: your spouse, a member of your family, a friend or your accountant, etc.) to whom you give consent to communicate on your behalf with Service Canada about your CPP and OAS.</p>
           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html';" type="button" class="btn btn-default">Give consent for someone to communicate with CPP/OAS on my behalf</button>
         </div>
