--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -282,7 +282,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="panel panel-default">
       <div class="panel-body">-->
         <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
-       <p>You can now switch to your Canada Revenue Agency account to view and manager your:
+       <p>You can now switch to your Canada Revenue Agency (CRA) account without having to log in again to view and manage your:
 			<ul>
 				<li>tax returns;</li>
 				<li>tax credits;</li>
@@ -293,7 +293,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		  </ul>
 	  
 	  <p>No need to log in again.</p>
-        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a> 
+        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
 	  <!--</div>
     </div>
 		  </section>
