--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -287,10 +287,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
             <p>Choose the “View my status and correspondence (Alert Me)” button to see your claim status, messages sent to you on your active and past claims (to Dec 2017) and subscribe to Alert Me service for email alerts.  If you have an active claim, the “Latest Claim” button shows the condition of your claim as of today including; start date of claim, weekly benefit rate, numbers of weeks of benefit paid, type of benefits being claimed etc. The “Payment information” button provides specific information on payment and non-payment details and your declarations for each week of EI benefits that you have claimed. </p>
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html';" type="button" class="btn btn-default">View my status and correspondence (Alert me)</button>
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html';" type="button" class="btn btn-default">Latest claim</button>
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html';" type="button" class="btn btn-default">Payment Information</button>
-          </div>
+            <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html';" type="button" class="btn btn-default">View my status and correspondence (Alert me)</button></li>
+            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html';" type="button" class="btn btn-default">Latest claim</button></li>
+            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html';" type="button" class="btn btn-default">Payment Information</button></li>
+          </ul>
+			</div>
         </div>
       </section>
       <section>
@@ -306,10 +308,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <summary>Service times for your Province or Territory</summary>
               <p>Info to be added.</p>
             </details>
-            <br />
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button>
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button>
-            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language written communications</button>
+            <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button></li>
+            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button></li>
+            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language for written communications</button></li>
+			  </ul>
           </div>
         </div>
       </section>
@@ -322,7 +325,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>Allows you to view and print ROEs submitted electronically by your employer during the last seven years. It also provides some information on ROEs that were submitted in paper format within the last seven years.</p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html';" type="button" class="btn btn-default">Records of Employment</button>
+           <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html';" type="button" class="btn btn-default">Records of Employment</button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -333,8 +338,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>The Tax slips T4E button Allows you to view and print T4Es for the current year and for the past six years if you received EI benefits. The Tax slip mailing options button allows you to suppress your mailed paper copy. </p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html';" type="button" class="btn btn-default">Tax slips (T4E)</button>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button>
+			
+          <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html';" type="button" class="btn btn-default">Tax slips (T4E)</button></li>
+          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -345,7 +353,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>If applicable, this page displays a list of your past EI claims. Choosing a particular claim will provide you with specific information on that past claim including past claim payment details. </p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims.html';" type="button" class="btn btn-default">Past claim(s)</button>
+         <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims.html';" type="button" class="btn btn-default">Past claim(s)</button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -356,7 +366,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>If you have an active EI claim and depending on the type of benefits you are receiving this service will display eForms which allow you to submit information to your claim electronically. eForms will only be displayed if you are on an active claim and you are receiving benefits to which these eForms apply. Note that eForms will not be displayed if you do not have an active EI claim or if these eForms do not apply to the type of benefits you are receiving (see the Help text).</p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Provide new information regarding my claim</button>
+          <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Provide new information regarding my claim</button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -367,7 +379,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>Self-employed Canadians can access Employment Insurance (EI) special benefits by entering into an agreement, or registering, with the Canada Employment Insurance Commission. </p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed.html';" type="button" class="btn btn-default">Self-employment Agreement, Register and/or status </button>
+          <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed.html';" type="button" class="btn btn-default">Self-employment Agreement, Register and/or status </button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -378,7 +392,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>Allows you to select the specific Province in which you reside and are claiming EI benefits. Selecting the c orrect Province ensures that you can access your EI information. </p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province.html';" type="button" class="btn btn-default">Province of residence</button>
+          <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province.html';" type="button" class="btn btn-default">Province of residence</button></li>
+			</ul>
         </div>
       </div>
       <div class="panel panel-default">
@@ -389,7 +405,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
           <p>Information on how to correct past mistakes.</p>
-          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html';" type="button" class="btn btn-default">Mistakes can happen</button>
+          <ul class="list-unstyled list-inline">
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html';" type="button" class="btn btn-default">Mistakes can happen</button></li>
+			</ul>
         </div>
       </div>
     </div>
