--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -280,8 +280,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	 <!-- <div class="col-md-5">
 		  <section>
     <div class="panel panel-default">
-      <div class="panel-body">-->
-        <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
+      <div class="panel-body">
+        <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>-->
        <p>You can now switch to your Canada Revenue Agency (CRA) account without having to log in again to view and manage your:
 			<ul>
 				<li>tax returns;</li>
