--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -272,6 +272,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="" rel="external">Complete additional EI forms</a></li>
           <li class="list-group-item"><a href="" rel="external">Find a job using Job Bank</a></li>
           <li class="list-group-item"><a href="">EI Publications</a>
+		  <li class="list-group-item"><a href="">Apply for a Passport</a>
           <li class="list-group-item"><a href="">Contact us</a></li>
         </ul>
       </div>
