--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -328,8 +328,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0"></h2>
-              <div class="brdr-bttm-fade">Payment and Direct Deposit</div>
+              <h2 id="a1-4" class="mrgn-tp-0">Payment and Direct Deposit</h2>
+              <div class="brdr-bttm-fade"></div>
             </div>
             <br />
           <p>The payment and direct deposit is used to view your most up-to-date payment reports and sign up for Direct Deposit.</p>
@@ -350,8 +350,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-6" class="mrgn-tp-0"></h2>
-              <div class="brdr-bttm-fade">CPP Child-Rearing Provision</div>
+              <h2 id="a1-6" class="mrgn-tp-0">CPP Child-Rearing Provision</h2>
+              <div class="brdr-bttm-fade"></div>
             </div>
             <br />
           <p>If you took time off from work or worked less to look after your young children, you may be able to increase the amount of your CPP retirement pension and other CPP benefits with the child-rearing provisions.</p>
