--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -302,7 +302,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			            <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-2" class="mrgn-tp-0">OAS/GIS Pension Application</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">OAS/GIS Pension Application&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -328,7 +328,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0">Payment and Direct Deposit</h2>
+              <h2 id="a1-4" class="mrgn-tp-0">Payment and Direct Deposit&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -339,7 +339,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-5" class="mrgn-tp-0">CPP Contributions and Benefits</h2>
+              <h2 id="a1-5" class="mrgn-tp-0">CPP Contributions and Benefits&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -350,7 +350,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-6" class="mrgn-tp-0">CPP Child-Rearing Provision</h2>
+              <h2 id="a1-6" class="mrgn-tp-0">CPP Child-Rearing Provision&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -362,7 +362,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-7" class="mrgn-tp-0">Tax information</h2>
+              <h2 id="a1-7" class="mrgn-tp-0">Tax information&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -375,7 +375,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-8" class="mrgn-tp-0">Consent on my behalf</h2>
+              <h2 id="a1-8" class="mrgn-tp-0">Consent on my behalf&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
