--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -265,7 +265,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a></li>
+          <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a><span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for my CPP children's benefit </a></li>
           <li class="list-group-item"><a href="">Apply for a CPP death benefit</a></li>
           <li class="list-group-item"><a href="">Apply for my OAS pension</a></li>
