--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -265,18 +265,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a><span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Apply for my CPP children's benefit </a></li>
-          <li class="list-group-item"><a href="">Apply for a CPP death benefit</a></li>
-          <li class="list-group-item"><a href="">Apply for my OAS pension</a></li>
-          <li class="list-group-item"><a href="">Apply for my Guaranteed Income Supplement</a></li>
-          <li class="list-group-item"><a href="">Apply for my Allowance Program</a></li>
-          <li class="list-group-item"><a href="">Apply for my Allowance for the Survivor Program</a></li>
-          <li class="list-group-item"><a href="">Apply for my International Benefits</a></li>
-          <li class="list-group-item"><a href="">Canadian Retirement Income Calculator </a></li>
-          <li class="list-group-item"><a href="">CPP Index</a></li>
-          <li class="list-group-item"><a href="">OAS Index</a></li>
-          <li class="list-group-item"><a href="">Contact us</a></li>
+          <li class="list-group-item"><a href="">Apply for my CPP survivor's pension</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my CPP children's benefit</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for a CPP death benefit</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my OAS pension</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my Guaranteed Income Supplement</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my Allowance Program</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my Allowance for the Survivor Program</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Apply for my International Benefits</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Canadian Retirement Income Calculator </a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">CPP Index</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">OAS Index</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Contact us</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
       </div>
     </div>
