--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -266,14 +266,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="" rel="external">Complete my EI report online</a></li>
-          <li class="list-group-item"><a href="" rel="external">Apply for EI online</a></li>
-          <li class="list-group-item"><a href="" rel="external">Appeal an EI decision</a></li>
-          <li class="list-group-item"><a href="" rel="external">Complete additional EI forms</a></li>
-          <li class="list-group-item"><a href="" rel="external">Find a job using Job Bank</a></li>
-          <li class="list-group-item"><a href="">EI Publications</a>
-		  <li class="list-group-item"><a href="">Apply for a Passport</a>
-          <li class="list-group-item"><a href="">Contact us</a></li>
+          <li class="list-group-item"><a href="" rel="external">Complete my EI report online</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Apply for EI online</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Appeal an EI decision</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Complete additional EI forms</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="" rel="external">Find a job using Job Bank</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">EI Publications</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+		  <li class="list-group-item"><a href="">Apply for a Passport</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Contact us</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
       </div>
     </div>
