--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -274,7 +274,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <div class="row">
   <aside style="padding-top:90px; padding-left:10px;">
   <div class="mrgn-tp-lg header-bg">
-    <h2>Our partner(s)</h2>
+    <h2>Other services</h2>
     <div class="brdr-bttm-fade"></div>
   </div>  <br />
 	 <!-- <div class="col-md-5">
