--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -249,12 +249,24 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     </div>
   </div>
   <br />
+	
+	
 	<section class="alert alert-info">
   <h2 class="h3">Tax slips</h2>
 
-<p>T4E, T4A and NR4 tax slips will be available <strong>online</strong> through My Service Canada Account <strong>as of February 2, 2020</strong>.</p>
-		<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct in My Service Canada Account.
-</p>
+<p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the &ldquo;Tax information&rdquo; section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS).&nbsp; </p>
+		<strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>.</p>
+	<p>Please check that your mailing address is correct. To View/Change your address, please complete the following steps:
+	<ol>
+	<li>Select EI;</li>
+	<li>Under View/Change, select "mailing address".  </li>
+	</ol>
+	<p><strong>or</strong></p>
+	<ol>
+	<li>Select CPP/OAS;</li>
+	<li>Under View/Change, select "Address".  </li>
+	</ol>
+		
 	</section>
 
   <section>
