--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -253,7 +253,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <h2 class="h3">Tax slips</h2>
 
 <p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through MSCA under the &ldquo;Tax information&rdquo; section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS).&nbsp; </p>
-		<strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct. To View/Change your address, please complete the following steps:
+		<p></p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct. To View/Change your address, please complete the following steps:</p>
 	    <ol>
 	<li>Select EI;</li>
 	<li>Under View/Change, select "mailing address".  </li>
