--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -252,20 +252,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<section class="alert alert-info">
   <h2 class="h3">Tax slips</h2>
 
-<p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through MSCA under the &ldquo;Tax information&rdquo; section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS).&nbsp; </p>
-		<p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>. Please check that your mailing address is correct.</p>
-	<p>To View/Change your address, please complete the following steps:</p>
-	    <ol>
-	<li>Select EI;</li>
-	<li>Under View/Change, select "mailing address".  </li>
-	</ol>
-	<p><strong>or</strong></p>
-	<ol>
-	<li>Select CPP/OAS;</li>
-	<li>Under View/Change, select "Address".  </li>
-	</ol>
-		
-	</section>
+<p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the &ldquo;Tax information&rdquo; section of Employment  Insurance and Canada Pension Plan / Old Age Security.</p>
+  <p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>.&nbsp;  Please check that your mailing address is correct in MSCA  under the View/Change section of Employment Insurance and Canada Pension Plan / Old  Age Security.&nbsp;</p>
+</section>
 
   <section>
     <div class="mrgn-tp-lg header-bg">
@@ -279,6 +268,19 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div> <a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
+	  <details>
+	  <summary>How to View/Change your address</summary>
+	  <p>It is important to keep you personal information up to date. To View/Change your address, please complete the following steps:
+	    <ol>
+	<li>Select EI;</li>
+	<li>Under View/Change, select "mailing address".  </li>
+	</ol>
+	<p><strong>or</strong></p>
+	<ol>
+	<li>Select CPP/OAS;</li>
+	<li>Under View/Change, select "Address".  </li>
+	</ol></p>
+	  </details>
   </section>
 
   <div class="row">
