--- a/scenarioA/services/my-account/MSCA/lobby-wax2.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax2.html
@@ -269,8 +269,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div> <a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
-	  <br />
-	  <div class="col-md-10">
+	<!-- <div class="clear"></div>
 	  <details>
 	  <summary>How to View/Change your address</summary>
 	  <p>It is important to keep you personal information up to date. To View/Change your address, please complete the following steps:
@@ -283,7 +282,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<li>Select CPP/OAS;</li>
 	<li>Under View/Change, select "Address".  </li>
 	</ol></p>
-	  </details></div>
+	  </details> -->
   </section>
 
   <div class="row">
