--- a/scenarioA/services/my-account/MSCA/lobby-wax3.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax3.html
@@ -253,6 +253,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <h2 class="h3">Tax slips</h2>
 
 <p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the &ldquo;Tax information&rdquo; section of Employment  Insurance and Canada Pension Plan / Old Age Security.</p>
+		<h3 class="h4">Verify your address</h3>
   <p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>.&nbsp;  Please check that your mailing address is correct in MSCA  under the View/Change section of Employment Insurance and Canada Pension Plan / Old  Age Security.&nbsp;</p>
 </section>
 
@@ -268,6 +269,20 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div> <a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
+	<div class="clear"></div>
+	  <details>
+	  <summary>How to View/Change your address</summary>
+	  <p>It is important to keep you personal information up to date. To View/Change your address, please complete the following steps:
+	    <ol>
+	<li>Select EI;</li>
+	<li>Under View/Change, select "mailing address".  </li>
+	</ol>
+	<p><strong>or</strong></p>
+	<ol>
+	<li>Select CPP/OAS;</li>
+	<li>Under View/Change, select "Address".  </li>
+	</ol></p>
+	  </details>
   </section>
 
   <div class="row">
