--- a/scenarioA/services/my-account/MSCA/lobby-wax3.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax3.html
@@ -269,7 +269,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div> <a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
-	<div class="clear"></div>
+	<br />
+	  <div class="col-md-12">
 	  <details>
 	  <summary>How to View/Change your address</summary>
 	  <p>It is important to keep you personal information up to date. To View/Change your address, please complete the following steps:
@@ -283,6 +284,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<li>Under View/Change, select "Address".  </li>
 	</ol></p>
 	  </details>
+	  </div>
   </section>
 
   <div class="row">
