--- a/scenarioA/services/my-account/MSCA/lobby-wax3.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax3.html
@@ -254,7 +254,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the &ldquo;Tax information&rdquo; section of Employment  Insurance and Canada Pension Plan / Old Age Security.</p>
 		<h3 class="h4">Verify your address</h3>
-  <p><strong>Paper tax slips</strong> will be mailed by the <strong>end of February</strong>.&nbsp;  Please check that your mailing address is correct in MSCA  under the View/Change section of Employment Insurance and Canada Pension Plan / Old  Age Security.&nbsp;</p>
+  <p><strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.&nbsp;  Please check that your mailing address is correct in MSCA  under the View/Change section of Employment Insurance and Canada Pension Plan / Old  Age Security.&nbsp;</p>
 </section>
 
   <section>
