--- a/scenarioA/services/my-account/MSCA/lobby-wax3.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax3.html
@@ -254,7 +254,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the &ldquo;Tax information&rdquo; section of Employment  Insurance and Canada Pension Plan / Old Age Security.</p>
 		<h3 class="h4">Verify your address</h3>
-  <p><strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.&nbsp;  Please check that your mailing address is correct in MSCA  under the View/Change section of Employment Insurance and Canada Pension Plan / Old  Age Security.&nbsp;</p>
+  <p><strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.&nbsp;</p>
 </section>
 
   <section>
@@ -270,7 +270,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
   </section>
-	<div class="row">
+	<!-- <div class="row">
 	  <aside style="padding-top:90px; padding-left:10px;">
 	  <details>
 	  <summary>How to View/Change your address</summary>
@@ -285,7 +285,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<li>Under View/Change, select "Address".  </li>
 	</ol></p>
 	  </details>
-	  </aside></div>
+	  </aside></div> -->
 
   <div class="row">
   <aside style="padding-top:90px; padding-left:10px;">
