--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -305,9 +305,15 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </div>
             <br />
             <p>The  Personal information section allows you to view or modify your mailing address,  telephone number, direct deposit information and preferred language of service  currently on file.</p>
+			  <p><strong>Note:</strong> Updates to your mailing address, telephone number and direct deposit information can only be accepted during the service times for your province or territory of residence, as indicated below (service times may be affected by statutory holidays). </p>
             <details>
               <summary>Service times for your Province or Territory</summary>
-              <p>Info to be added.</p>
+              <ul>
+				<li><strong>Atlantic Canada:</strong> from 6:00 am to 9:00 pm Atlantic Standard Time (AST) Monday to Friday and from 6:00 am to 5:00 pm AST Saturday and Sunday.</li>
+<li><strong>Quebec:</strong> from 6:00 am to 10:00 pm Eastern Standard Time (EST) Monday to Friday and from 6:00 am to 4:30 pm EST Saturday and Sunday.</li>
+<li><strong>Ontario:</strong> from 6:00 am to 10:30 pm Eastern Standard Time (EST) Monday to Friday, from 6:00 am to 4:00 pm EST Saturday and from 7:00 am to 5:00 pm Sunday.</li>
+<li><strong>Western Canada:</strong> from 7:00 am to 10:00 pm Central Time (CT) Monday to Friday and from 7:00 am to 7:00 pm (CT) Saturday and Sunday.
+</li></ul>
             </details>
             <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button></li>
